@@ -15,7 +15,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'description' => 'This extension allows you to create and manage a list of seminars, workshops, lectures, theater performances and other events, allowing front-end users to sign up. FE users also can create and edit events.',
 	'category' => 'plugin',
 	'shy' => 0,
-	'dependencies' => 'cms,css_styled_content,oelib,ameos_formidable,partner,static_info_tables,static_info_tables_taxes',
+	'dependencies' => 'cms,css_styled_content,oelib,ameos_formidable,static_info_tables,static_info_tables_taxes',
 	'conflicts' => 'dbal',
 	'priority' => '',
 	'loadOrder' => '',
@@ -24,7 +24,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'internal' => 0,
 	'uploadfolder' => 1,
 	'createDirs' => '',
-	'modify_tables' => 'be_groups,fe_groups,fe_users,tx_partner_contact_info,tx_partner_main',
+	'modify_tables' => 'be_groups,fe_groups,fe_users',
 	'clearCacheOnLoad' => 1,
 	'lockType' => '',
 	'author' => 'Oliver Klee',
@@ -42,7 +42,6 @@ $EM_CONF[$_EXTKEY] = array(
 			'css_styled_content' => '',
 			'oelib' => '0.7.53-',
 			'ameos_formidable' => '1.1.0-1.9.99',
-			'partner' => '0.5.0-',
 			'static_info_tables' => '2.1.0-',
 			'static_info_tables_taxes' => '',
 		),
